violating_resources/anthos-service-mesh/request-authentication/prohibited-output-headers/samples/example_allowed.yaml
apiVersion: security.istio.io/v1beta1
kind: RequestAuthentication
metadata:
  name: valid-request-authn
  namespace: istio-system
spec:
  selector:
    matchLabels:
      app: istio-ingressgateway
  jwtRules:
  - issuer: "example.com"
    outputPayloadToHeader: "Good-Header"
