violating_resources/anthos-service-mesh/request-authentication/prohibited-output-headers/samples/example_disallowed_well_known_header.yaml
apiVersion: security.istio.io/v1beta1
kind: RequestAuthentication
metadata:
  name: deny-predefined-output-header
  namespace: istio-system
spec:
  selector:
    matchLabels:
      app: istio-ingressgateway
  jwtRules:
  - issuer: "example.com"
    outputPayloadToHeader: "Host"
